--- a/css/pc/pc.css
+++ b/css/pc/pc.css
@@ -338,7 +338,7 @@ div.html-code {
   }
 
   .content,
-  content-special {
+  .content-special {
     padding-left: 15vw;
     padding-right: 15vw;
     width: 100%;
