--- a/css/pc/pc.css
+++ b/css/pc/pc.css
@@ -155,6 +155,19 @@ i.footer {
   width: 40%;
   min-width: 20rem;
   z-index: 1;
+  animation: phone 4s infinite;
+}
+
+@keyframes phone {
+  0% {
+    opacity: 0.2;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.2;
+  }
 }
 .my-social::-webkit-scrollbar {
   width: 0 !important;
@@ -348,6 +361,9 @@ div.html-code {
 @media screen and (max-width: 1200px) {
   .about-me {
     padding-top: 0;
+  }
+  .about-me-text-align {
+    text-align: center;
   }
   .about-me-window {
     padding-left: 1rem;
