--- a/css/pc/window.css
+++ b/css/pc/window.css
@@ -1,4 +1,5 @@
 .app-window-header {
+  border-radius: 0.5rem 0.5rem 0 0;
   padding: 10px;
   background-color: #ccc;
   cursor: move;
@@ -55,7 +56,9 @@
   transform: translate(-50%, -50%);
   width: 80%;
   height: 80%;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.781);
+  backdrop-filter: blur(10px);
+  border-radius: 0.5rem;
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
   z-index: 10;
   display: none; /* скрываем окно приложения по умолчанию */
@@ -69,7 +72,7 @@ a {
   text-decoration: none;
 }
 
-span {
+span.window-span {
   line-height: 9px;
   vertical-align: 50%;
 }
