--- a/css/pc/window.css
+++ b/css/pc/window.css
@@ -34,7 +34,7 @@
   width: 40px;
   height: 40px;
   overflow: hidden;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  filter: drop-shadow(0 2px 8px rgba(0, 0, 0, 0.1));
   transition: transform 0.2s ease-out;
 }
 
@@ -62,10 +62,30 @@
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
   z-index: 10;
   display: none; /* скрываем окно приложения по умолчанию */
+  overflow: hidden;
+  padding-bottom: 2rem;
 }
 .app-window-body {
-  overflow-y: scroll;
-  height: 92%;
+  overflow-y: auto;
+  height: 100%;
+}
+/* scrollbar styling */
+/* Works on Chrome/Edge/Safari */
+.app-window-body::-webkit-scrollbar {
+  width: 12px;
+}
+
+.app-window-body::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+
+.app-window-body::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 0.25rem;
+}
+
+.app-window-body::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
 }
 /* window header */
 a {
@@ -92,7 +112,6 @@ span.window-span {
   height: 20px;
   border-top: 1px solid #f3f1f3;
   border-bottom: 1px solid #b1aeb1;
-
   user-select: none;
   -webkit-user-select: none;
   -moz-user-select: none;
