--- a/css/pc/pc.css
+++ b/css/pc/pc.css
@@ -1,4 +1,11 @@
 @import url("https://fonts.cdnfonts.com/css/open-sans");
+*::-webkit-scrollbar{
+  background: white;
+}
+*::-webkit-scrollbar-thumb{
+  background: gray
+ 
+}
 * {
   padding: 0;
   font-family: "Open Sans", sans-serif !important;
