--- a/css/pc/window.css
+++ b/css/pc/window.css
@@ -72,7 +72,7 @@ a.app-button {
   z-index: 10;
   display: none; /* скрываем окно приложения по умолчанию */
   overflow: hidden;
-  padding-bottom: 2rem;
+  padding-bottom: 3rem;
 }
 .app-window-body {
   overflow-y: auto;
@@ -228,3 +228,77 @@ h3 {
 }
 
 /* content END */
+/* dockbar */
+.about-me-window {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.desktop-icons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: left;
+  max-width: 800px;
+  margin-top: 20px;
+}
+
+.icon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
+  width: 100px;
+  height: 100px;
+  background-color: black;
+
+  border-radius: 10px;
+}
+
+.icon img {
+  max-width: 55%;
+  max-height: 70%;
+}
+
+.icon span {
+  margin-top: 5px;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
+}
+
+#vscode-editor {
+  width: 100%;
+  height: 100%;
+}
+@keyframes bounce {
+  from,
+  20%,
+  53%,
+  80%,
+  to {
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    transform: translate3d(0, 0, 0);
+  }
+
+  40%,
+  43% {
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    transform: translate3d(0, -30px, 0);
+  }
+
+  70% {
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    transform: translate3d(0, -15px, 0);
+  }
+
+  90% {
+    transform: translate3d(0, -4px, 0);
+  }
+}
+
+.bounce {
+  animation-name: bounce;
+  animation-duration: 1s;
+}
