--- a/css/pc/pc.css
+++ b/css/pc/pc.css
@@ -188,14 +188,21 @@ i.footer {
   background: none !important;
   border: none !important;
 }
+.card-text::first-letter{
+  padding-left: 0.5rem;
+}
+.card-title{
+  padding-left: 0.5rem;
+}
 .row > .col {
   border: solid 1px rgba(245, 222, 179, 0);
   transition: 1s;
 }
 .row > .col:hover {
   border-bottom: solid 1px white;
-  animation: bg-anim 2s;
+  background: rgba(255, 255, 255, 0.1);
 }
+
 .cat-maincontent {
   padding-top: 2rem;
   padding-bottom: 2rem;
@@ -204,17 +211,7 @@ i.footer {
   width: 100% !important;
 }
 
-@keyframes bg-anim {
-  0% {
-    background: none;
-  }
-  50% {
-    background: rgba(255, 255, 255, 0.1);
-  }
-  100% {
-    background: none;
-  }
-}
+
 .pingv {
   width: 36rem;
   opacity: 0.4;
@@ -320,9 +317,25 @@ div.html-code {
     background-position: 0% 53%;
   }
 }
+@keyframes col-move-padding {
+  0% {
+    padding-top: 0;
+  }
+  100% {
+    padding-top: 6rem;
+  }
+
+}
 @media screen and (min-width: 1200px) {
+  .col:nth-child(odd) {
+  animation: col-move-padding forwards 1s;
+  }
   .todo {
     width: 80%;
+  }
+  .todo .col:nth-child(odd) {
+    padding-top: 0;
+    animation: none;
   }
   .about-me-window {
     padding-left: 2rem;
