--- a/next-migration/app/globals.css
+++ b/next-migration/app/globals.css
@@ -187,3 +187,220 @@ a:hover {
     scroll-behavior: auto !important;
   }
 }
+
+/* Стили для эффекта пламени */
+.fire-background {
+  position: relative;
+  overflow: hidden;
+  border-radius: calc(var(--border-radius) * 2);
+  background: linear-gradient(
+    180deg,
+    rgba(255, 68, 0, 0) 0%,
+    rgba(255, 140, 0, 0.055) 50%,
+    rgba(255, 0, 0, 0.1) 100%
+  );
+}
+
+.fire-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 0;
+}
+
+.fire-flame {
+  position: absolute;
+  height: auto;
+  opacity: 0.6;
+  filter: blur(0.5px);
+}
+
+.fire-flame svg {
+  width: 100%;
+  height: auto;
+}
+
+.fire-flame:nth-child(1) {
+  width: 200px;
+  left: 5%;
+  bottom: -30px;
+}
+.fire-flame:nth-child(2) {
+  width: 90px;
+  left: 15%;
+  bottom: -25px;
+}
+.fire-flame:nth-child(3) {
+  width: 170px;
+  left: 25%;
+  bottom: -35px;
+}
+.fire-flame:nth-child(4) {
+  width: 160px;
+  left: 35%;
+  bottom: -20px;
+}
+.fire-flame:nth-child(5) {
+  width: 80px;
+  left: 45%;
+  bottom: -40px;
+}
+.fire-flame:nth-child(6) {
+  width: 110px;
+  left: 55%;
+  bottom: -15px;
+}
+.fire-flame:nth-child(7) {
+  width: 65px;
+  left: 65%;
+  bottom: -30px;
+}
+.fire-flame:nth-child(8) {
+  width: 195px;
+  left: 75%;
+  bottom: -25px;
+}
+.fire-flame:nth-child(9) {
+  width: 75px;
+  left: 85%;
+  bottom: -35px;
+}
+.fire-flame:nth-child(10) {
+  width: 185px;
+  left: 95%;
+  bottom: -20px;
+}
+
+.flame {
+  animation-name: flamefly;
+  animation-duration: 2s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  opacity: 0;
+  transform-origin: 50% 100% 0;
+}
+
+.flame.one {
+  animation-delay: 0.5s;
+  animation-duration: 2.8s;
+}
+
+.flame.two {
+  animation-duration: 4.2s;
+  animation-delay: 1.2s;
+}
+
+.flame-main {
+  animation-name: flameWobble;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+}
+
+.flame-main.one {
+  animation-duration: 3.8s;
+  animation-delay: 0.3s;
+}
+
+.flame-main.two {
+  animation-duration: 2.7s;
+  animation-delay: 1.1s;
+}
+
+.flame-main.three {
+  animation-duration: 3.3s;
+  animation-delay: 1.8s;
+}
+
+.flame-main.four {
+  animation-duration: 2.9s;
+  animation-delay: 0.7s;
+}
+
+.flame-main.five {
+  animation-duration: 3.6s;
+  animation-delay: 2.2s;
+}
+
+/* Дополнительные рандомные анимации для каждого языка пламени */
+.fire-flame:nth-child(1) .flame-main {
+  animation-duration: 2.4s;
+  animation-delay: 0.1s;
+}
+.fire-flame:nth-child(2) .flame-main {
+  animation-duration: 3.1s;
+  animation-delay: 0.8s;
+}
+.fire-flame:nth-child(3) .flame-main {
+  animation-duration: 2.8s;
+  animation-delay: 1.5s;
+}
+.fire-flame:nth-child(4) .flame-main {
+  animation-duration: 3.4s;
+  animation-delay: 0.4s;
+}
+.fire-flame:nth-child(5) .flame-main {
+  animation-duration: 2.6s;
+  animation-delay: 1.9s;
+}
+.fire-flame:nth-child(6) .flame-main {
+  animation-duration: 3.7s;
+  animation-delay: 0.6s;
+}
+.fire-flame:nth-child(7) .flame-main {
+  animation-duration: 2.9s;
+  animation-delay: 1.3s;
+}
+.fire-flame:nth-child(8) .flame-main {
+  animation-duration: 3.2s;
+  animation-delay: 0.9s;
+}
+.fire-flame:nth-child(9) .flame-main {
+  animation-duration: 2.7s;
+  animation-delay: 1.6s;
+}
+.fire-flame:nth-child(10) .flame-main {
+  animation-duration: 3.5s;
+  animation-delay: 0.2s;
+}
+
+@keyframes flameWobble {
+  0% {
+    transform: scale(1) translate(0, 0) rotate(0deg);
+  }
+  25% {
+    transform: scale(1.05, 1.1) translate(-5px, -15px) rotate(-1deg);
+  }
+  50% {
+    transform: scale(0.95, 1.3) translate(8px, -25px) rotate(2deg);
+  }
+  75% {
+    transform: scale(1.1, 0.9) translate(-3px, -10px) rotate(-1.5deg);
+  }
+  100% {
+    transform: scale(1) translate(0, 0) rotate(0deg);
+  }
+}
+
+@keyframes flamefly {
+  0% {
+    transform: translate(0, 0) rotate(0deg) scale(0.8);
+    opacity: 0;
+  }
+  20% {
+    opacity: 0.7;
+  }
+  50% {
+    opacity: 1;
+    transform: translate(-10px, -50px) rotate(45deg) scale(1);
+  }
+  80% {
+    opacity: 0.5;
+  }
+  100% {
+    transform: translate(-30px, -120px) rotate(90deg) scale(0.3);
+    opacity: 0;
+  }
+}
