--- a/next-migration/app/globals.css
+++ b/next-migration/app/globals.css
@@ -7,6 +7,7 @@
 @import "../styles/original.css";
 @import "../styles/windows.css";
 @import "../styles/solar.css";
+@import "../styles/components.css";
 
 /* CSS переменные для тем */
 :root {
